[package]
name = "cellforce-script-core"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
rhai = "1.20.0"
rustpython = { version = "0.4.0", features = ["freeze-stdlib"], optional = true}
rustpython-vm = { version = "0.4.0", features = ["freeze-stdlib"] , optional = true}
boa_engine = { version = "0.19.0" }
thiserror = "1.0.63"
base64 = "0.22.1"
indexmap = "2.7.0"
indoc = "1.0.6"

swc_core = "11.0.1"
swc_common = { version = "8.0.1", features = ["tty-emitter"] }
swc_ecma_parser = "10.0.2"
swc_ecma_codegen = "8.0.2"
swc_ecma_transforms_base = "11.2.0"
swc_ecma_transforms_typescript = "12.0.1"

koto = {  version = "0.15.2", default-features = false, features = ["arc"] }

rust2go = { version = "0.4.0"}
uuid = {  version = "1.11.0" , features = ["v4"]}

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "time"] }
criterion = "0.4"
test-log = "0.2.10"
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }

[build-dependencies]
rust2go = { version = "0.4.0", features = ["build"]}
cc = "1.0"

[features]
python = ["rustpython", "rustpython-vm"]

[[bench]]
name = "scripts"
harness = false
